Adding all files

--- a/Version_1.ipynb
+++ b/Version_1.ipynb
@@ -3,6 +3,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0f2363cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Implement code for configuring GPU and parallel processing for images\n",
+    "# Implement code for creating testing, validation and training dataset using the\n",
+    "# flow_from_dataframe API from tensorflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4ab5ebd7",
    "metadata": {},
    "outputs": [
@@ -16,39 +28,28 @@
     }
    ],
    "source": [
-    "!pip install tqdm\n",
-    "!pip install tensorflow"
+    "# !pip install tqdm\n",
+    "# !pip install tensorflow"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "4b796b10",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'tensorflow'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtqdm\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnotebook\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m tqdm \u001b[38;5;28;01mas\u001b[39;00m tqdm\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mcv2\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mcv\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mtf\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
     "import shutil\n",
     "from tqdm.notebook import tqdm as tqdm\n",
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "e31ab3e9",
    "metadata": {},
    "outputs": [
@@ -56,9 +57,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original shape: (54706, 14)\n",
-      "After dropping shape: (29470, 14)\n",
-      "Density categories: ['C' 'D' 'B' 'A']\n"
+      "Original shape: (54706, 14)\n"
      ]
     },
     {
@@ -82,150 +81,93 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>site_id</th>\n",
-       "      <th>patient_id</th>\n",
-       "      <th>image_id</th>\n",
-       "      <th>laterality</th>\n",
-       "      <th>view</th>\n",
-       "      <th>age</th>\n",
+       "      <th>filename</th>\n",
        "      <th>cancer</th>\n",
-       "      <th>biopsy</th>\n",
-       "      <th>invasive</th>\n",
-       "      <th>BIRADS</th>\n",
-       "      <th>implant</th>\n",
-       "      <th>density</th>\n",
-       "      <th>machine_id</th>\n",
-       "      <th>difficult_negative_case</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>1</td>\n",
-       "      <td>10038</td>\n",
-       "      <td>1967300488</td>\n",
-       "      <td>L</td>\n",
-       "      <td>MLO</td>\n",
-       "      <td>60.0</td>\n",
+       "      <th>0</th>\n",
+       "      <td>10006_462822612.png</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>C</td>\n",
-       "      <td>216</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>1</td>\n",
-       "      <td>10038</td>\n",
-       "      <td>2142944869</td>\n",
-       "      <td>L</td>\n",
-       "      <td>CC</td>\n",
-       "      <td>60.0</td>\n",
+       "      <th>1</th>\n",
+       "      <td>10006_1459541791.png</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>C</td>\n",
-       "      <td>216</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>1</td>\n",
-       "      <td>10038</td>\n",
-       "      <td>850559196</td>\n",
-       "      <td>R</td>\n",
-       "      <td>MLO</td>\n",
-       "      <td>60.0</td>\n",
+       "      <th>2</th>\n",
+       "      <td>10006_1864590858.png</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>C</td>\n",
-       "      <td>216</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>1</td>\n",
-       "      <td>10038</td>\n",
-       "      <td>1350492010</td>\n",
-       "      <td>R</td>\n",
-       "      <td>CC</td>\n",
-       "      <td>60.0</td>\n",
+       "      <th>3</th>\n",
+       "      <td>10006_1874946579.png</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>C</td>\n",
-       "      <td>216</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>1</td>\n",
-       "      <td>10042</td>\n",
-       "      <td>102733848</td>\n",
-       "      <td>L</td>\n",
-       "      <td>CC</td>\n",
-       "      <td>51.0</td>\n",
+       "      <th>4</th>\n",
+       "      <td>10011_220375232.png</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>C</td>\n",
-       "      <td>93</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    site_id  patient_id    image_id laterality view   age  cancer  biopsy  \\\n",
-       "12        1       10038  1967300488          L  MLO  60.0       0       0   \n",
-       "13        1       10038  2142944869          L   CC  60.0       0       0   \n",
-       "14        1       10038   850559196          R  MLO  60.0       0       0   \n",
-       "15        1       10038  1350492010          R   CC  60.0       0       0   \n",
-       "16        1       10042   102733848          L   CC  51.0       0       0   \n",
-       "\n",
-       "    invasive  BIRADS  implant density  machine_id  difficult_negative_case  \n",
-       "12         0     1.0        0       C         216                    False  \n",
-       "13         0     1.0        0       C         216                    False  \n",
-       "14         0     1.0        0       C         216                    False  \n",
-       "15         0     1.0        0       C         216                    False  \n",
-       "16         0     1.0        0       C          93                    False  "
+       "               filename cancer\n",
+       "0   10006_462822612.png      0\n",
+       "1  10006_1459541791.png      0\n",
+       "2  10006_1864590858.png      0\n",
+       "3  10006_1874946579.png      0\n",
+       "4   10011_220375232.png      0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# getting the current working directory\n",
-    "cwd = os.getcwd()\n",
-    "df = pd.read_csv(cwd+'/train.csv')\n",
+    "df = pd.read_csv('D:/temp/train.csv',dtype=str)\n",
     "print(\"Original shape: {}\".format(df.shape))\n",
+    "df['filename'] = [\"\".join([str(df['patient_id'][i]),'_',str(df['image_id'][i]),'.png']) \\\n",
+    "                  for i in range(len(df))]\n",
+    "df = df.loc[:,['filename','cancer']]\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
+   "id": "06c8c9a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['0', '1'], dtype=object)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['cancer'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "6f5bb338",
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_img(path):\n",
-    "    IMAGE_SIZE=256\n",
+    "    \n",
     "    img = tf.io.read_file(path)\n",
     "    img = tf.image.decode_png(img, channels = 1)\n",
     "    img = tf.image.resize(img, [IMAGE_SIZE, IMAGE_SIZE])\n",
@@ -236,31 +178,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "c0bccc77",
+   "execution_count": 22,
+   "id": "c1d17b35",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 54706 validated image filenames belonging to 2 classes.\n"
+     ]
+    },
+    {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "324a188947724dd1931de19f6d24fadb",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "0it [00:00, ?it/s]"
+       "<keras.preprocessing.image.DataFrameIterator at 0x219abbd7f10>"
       ]
      },
+     "execution_count": 22,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = zip(df.patient_id,df.image_id)\n",
-    "imgs = []\n",
-    "for patient, image in tqdm(data,dynamic_ncols=True):\n",
-    "    src = cwd + '/train_new/' + str(patient) + '_' + str(image) +'.png'\n",
-    "    imgs.append(load_img(src))"
+    "path = 'D:/temp/train_new/'\n",
+    "IMAGE_SIZE=256\n",
+    "datagen = tf.keras.preprocessing.image.ImageDataGenerator(\n",
+    "    rescale=1. / 255,\n",
+    "    shear_range=0.2,\n",
+    "    zoom_range=0.2,\n",
+    "    horizontal_flip=True)\n",
+    "datagen.flow_from_dataframe(df,\n",
+    "    directory=path,\n",
+    "    x_col='filename',\n",
+    "    y_col='cancer',\n",
+    "    weight_col=None,\n",
+    "    target_size=(IMAGE_SIZE, IMAGE_SIZE),\n",
+    "    color_mode='rgb',\n",
+    "    class_mode='binary',\n",
+    "    batch_size=10,\n",
+    "    shuffle=True,\n",
+    "    save_format='png',\n",
+    "    subset='training',\n",
+    "    interpolation='nearest',\n",
+    "    validate_filenames=True,\n",
+    ")\n",
+    "# x_train,x_test,y_train,y_test = train_test_split(df.filename,df.cancer,stratify=df.cancer,test=0.20)\n",
+    "# model.fit(datagen.flow(x_train, y_train, batch_size=32,\n",
+    "#          subset='training'),\n",
+    "#          validation_data=datagen.flow(x_train, y_train,\n",
+    "#          batch_size=8, subset='validation'),\n",
+    "#          steps_per_epoch=len(x_train) / 32, epochs=epochs)"
    ]
   }
  ],
@@ -280,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
